examples/test/testpolicy7626.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7626
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key35: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value13
          key13: value11
          key16: value41
      podSelector:
        matchLabels:
          key7: value22
          key18: value34
          key26: value3
